--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
                 <h3>TABOK</h3>
             </div>
         </div>
-        <div>
-            <p class="about">Welcome to <span> Saudi Arabia,</span> one of the most culturally diverse countries in the world. It is home of authentic customs, traditions and prehistoric civilizations ... discover with us through the timeline of history the oldest civilizations in the world that Saudi Arabia has embraced through the ages.</p>
-        </div>
+
     </section>
         <section class="riyadh-page">
                 <div class="info">
@@ -51,7 +49,7 @@
                     <a href="#rn1"> <h3>Nature</h3></a>
                 </div>
                 <div class="pic-frame"id="history">
-                    <h3>History</h3>
+                    <a href="#h1"> <h3>History</h3></a>
                 </div>
                 <div class="pic-frame"id="great-places">
                     <h3>Great Places</h3>
@@ -94,11 +92,11 @@
               <h3 class="carousel-byline">You should probably go sometime</h3>
             </div>
           </section>
-          <section class="history-page">
+          <section class="history-page" id="h1">
               <h2>Historic Al Dir'iya</h2>
               <h4>Al Dir'iya is a historic oasis located on the banks of Wadi Hanifa that had attracted urban settlements since time immemorial. Al Dir'iya’s land occupies the fertile curve of Wadi Hanifa on the outskirts of Riyadh, the capital city of the Kingdom of Saudi Arabia.</h4>
           </section>
-          <aside><button id="button">take me home</button></aside>
+          
           <section class="carousel-container">
             
                 <div class="carousel-item carousel-item-4">
